Padding and cropping to deal with unwanted edge effects

--- a/notebooks/test-pipeline.ipynb
+++ b/notebooks/test-pipeline.ipynb
@@ -41,12 +41,12 @@
    "outputs": [],
    "source": [
     "# Image simulator\n",
-    "from jax_2dtm.simulator import compute_anti_aliasing_filter\n",
+    "from jax_2dtm.simulator import compute_anti_aliasing_filter, rescale_image\n",
     "from jax_2dtm.simulator import NufftScattering, GaussianScattering, Cloud\n",
     "from jax_2dtm.simulator import ScatteringImage, OpticsImage, GaussianImage\n",
     "from jax_2dtm.simulator import AntiAliasingFilter, WhiteningFilter\n",
     "from jax_2dtm.simulator import EulerPose, CTFOptics, Intensity, WhiteNoise, LorenzianNoise, ParameterState\n",
-    "from jax_2dtm.utils import fft, ifft, fftfreqs"
+    "from jax_2dtm.utils import fft, ifft, fftfreqs, pad"
    ]
   },
   {
@@ -67,70 +67,9 @@
    "outputs": [],
    "source": [
     "# Configure image data and read template as point cloud\n",
-    "config = NufftScattering((81, 81), pixel_size, eps=1e-6)\n",
-    "#config = GaussianScattering((81, 81), pixel_size, scale=pixel_size/3)\n",
+    "config = NufftScattering((95, 95), pixel_size, pad_scale=1.4, eps=1e-6)\n",
+    "#config = GaussianScattering((131, 131), pixel_size, pad=2, scale=1/3)\n",
     "cloud = load_grid_as_cloud(filename, config)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Compute scattering image\n",
-    "pose = EulerPose(-50.0, 90.0, np.pi / 8, np.pi / 10, np.pi / 4)\n",
-    "transformed_cloud = cloud.view(pose)\n",
-    "scattering_image = transformed_cloud.project(config) * compute_anti_aliasing_filter(config.freqs * config.pixel_size, cutoff=1.0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Apply optics model and normalize\n",
-    "N1, N2 = config.shape\n",
-    "optics = CTFOptics()\n",
-    "ctf = optics(config.freqs)\n",
-    "optics_image = scattering_image * ctf\n",
-    "optics_image = optics_image.at[N1//2, N2//2].set(0.0)\n",
-    "optics_image = optics_image / (jnp.sqrt(jnp.sum((optics_image * jnp.conjugate(optics_image)))) / (N1*N2))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Add gaussian noise\n",
-    "key = jax.random.PRNGKey(seed=0)\n",
-    "noise = WhiteNoise(key=key, sigma=1.0)\n",
-    "noisy_image = optics_image + noise.sample(config.freqs * config.pixel_size)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Plot scattering\n",
-    "fig, axes = plt.subplots(ncols=3, figsize=(12, 7))\n",
-    "ax1, ax2, ax3 = axes\n",
-    "ax1.imshow(ifft(scattering_image), origin=\"lower\", cmap=\"gray\")\n",
-    "ax2.imshow(ifft(optics_image), origin=\"lower\", cmap=\"gray\")\n",
-    "ax3.imshow(ifft(noisy_image), origin=\"lower\", cmap=\"gray\")"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now that we have confirmed the pipeline works step-by-step, let's demonstrate how to use the API."
    ]
   },
   {
@@ -142,9 +81,9 @@
     "# Initialize model, parameters, and compute image\n",
     "pose = EulerPose(-50.0, -50.0, np.pi / 8, np.pi / 10, np.pi / 4)\n",
     "optics = CTFOptics()\n",
-    "noise = WhiteNoise(key=key)\n",
+    "noise = WhiteNoise(key=jax.random.PRNGKey(seed=0))\n",
     "intensity = Intensity()\n",
-    "state = ParameterState(pose=pose, optics=optics, noise=noise, intensity=intensity)\n"
+    "state = ParameterState(pose=pose, optics=optics, noise=noise, intensity=intensity)"
    ]
   },
   {
@@ -187,11 +126,11 @@
    "outputs": [],
    "source": [
     "# Instantiate image filters\n",
-    "fig, ax = plt.subplots(figsize=(4, 4))\n",
-    "micrograph = noisy_model()\n",
-    "filters = [AntiAliasingFilter(config.pixel_size * config.freqs), WhiteningFilter(config.pixel_size * config.freqs, micrograph)]\n",
-    "filtered_model = GaussianImage(config=config, cloud=cloud, state=state, filters=filters)\n",
-    "ax.imshow(ifft(filtered_model()), origin=\"lower\", cmap=\"gray\")"
+    "#fig, ax = plt.subplots(figsize=(4, 4))\n",
+    "#micrograph = noise.sample(fftfreqs((1000, 1000), pixel_size))\n",
+    "#filters = [AntiAliasingFilter(config.pixel_size * config.padded_freqs), WhiteningFilter(config.pixel_size * config.padded_freqs, micrograph)]\n",
+    "#filtered_model = GaussianImage(config=config, cloud=cloud, state=state, filters=filters)\n",
+    "#ax.imshow(ifft(filtered_model()), origin=\"lower\", cmap=\"gray\")"
    ]
   },
   {
@@ -201,11 +140,11 @@
    "outputs": [],
    "source": [
     "# Visualize filters\n",
-    "fig, axes = plt.subplots(ncols=2, figsize=(8, 6))\n",
-    "ax1, ax2 = axes\n",
-    "antialias, whiten = filters\n",
-    "im1 = ax1.imshow(np.log(whiten.filter), cmap=\"gray\")\n",
-    "im2 = ax2.imshow(antialias.filter, cmap=\"gray\")"
+    "#fig, axes = plt.subplots(ncols=2, figsize=(8, 6))\n",
+    "#ax1, ax2 = axes\n",
+    "#antialias, whiten = filters\n",
+    "#im1 = ax1.imshow(np.log(whiten.filter), cmap=\"gray\")\n",
+    "#im2 = ax2.imshow(antialias.filter, cmap=\"gray\")"
    ]
   },
   {
@@ -264,7 +203,8 @@
     "# Initialize the model and plot residuals\n",
     "fig, axes = plt.subplots(ncols=3, figsize=(12, 7))\n",
     "ax1, ax2, ax3 = axes\n",
-    "model = GaussianImage(config=config, cloud=cloud, state=state, observed=noisy_model())\n",
+    "observed = noisy_model()\n",
+    "model = GaussianImage(config=config, cloud=cloud, state=state, observed=observed)\n",
     "simulated, observed, residuals = model.render(), model.observed, model.residuals()\n",
     "ax1.imshow(ifft(simulated), origin=\"lower\", cmap=\"gray\")\n",
     "ax2.imshow(ifft(observed), origin=\"lower\", cmap=\"gray\")\n",
