fix and begin testing whitening filter

--- a/notebooks/test-pipeline.ipynb
+++ b/notebooks/test-pipeline.ipynb
@@ -45,7 +45,7 @@
     "from jax_2dtm.simulator import ScatteringImage, OpticsImage, GaussianImage\n",
     "from jax_2dtm.simulator import AntiAliasingFilter, WhiteningFilter\n",
     "from jax_2dtm.simulator import EulerPose, CTFOptics, Intensity, WhiteNoise, LorenzianNoise, ParameterState\n",
-    "from jax_2dtm.utils import fft, ifft, fftfreqs, pad"
+    "from jax_2dtm.utils import fft, ifft, fftfreqs, pad, powerspectrum, radial_average"
    ]
   },
   {
@@ -80,7 +80,7 @@
     "# Initialize model, parameters, and compute image\n",
     "pose = EulerPose(-50.0, 50.0, np.pi / 4, np.pi / 10, np.pi / 4)\n",
     "optics = CTFOptics()\n",
-    "noise = WhiteNoise(key=jax.random.PRNGKey(seed=0))\n",
+    "noise = LorenzianNoise(key=jax.random.PRNGKey(seed=0), kappa=0.5, xi=6.0)\n",
     "intensity = Intensity()\n",
     "state = ParameterState(pose=pose, optics=optics, noise=noise, intensity=intensity)"
    ]
@@ -111,13 +111,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -132,11 +125,31 @@
    "outputs": [],
    "source": [
     "# Instantiate image filters\n",
-    "#fig, ax = plt.subplots(figsize=(4, 4))\n",
-    "#micrograph = noise.sample(fftfreqs((1000, 1000), pixel_size))\n",
-    "#filters = [AntiAliasingFilter(config.pixel_size * config.padded_freqs), WhiteningFilter(config.pixel_size * config.padded_freqs, micrograph)]\n",
-    "#filtered_model = GaussianImage(config=config, cloud=cloud, state=state, filters=filters)\n",
-    "#ax.imshow(ifft(filtered_model()), origin=\"lower\", cmap=\"gray\")"
+    "fig, ax = plt.subplots(figsize=(4, 4))\n",
+    "micrograph_freqs = fftfreqs((1200, 800), pixel_size)\n",
+    "micrograph = noise.sample(config.pixel_size * micrograph_freqs)\n",
+    "whiten = WhiteningFilter(config.pixel_size * config.freqs, config.pixel_size * micrograph_freqs, micrograph)\n",
+    "plt.imshow(ifft(whiten(noisy_model())), origin=\"lower\", cmap=\"gray\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We see that the whitening filter looks right, empirically! Now generate an image at a colored noise model with a given whitening filter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Show forward model for a whitened image\n",
+    "fig, ax = plt.subplots(figsize=(4, 4))\n",
+    "filters = [AntiAliasingFilter(config.pixel_size * config.padded_freqs), WhiteningFilter(config.pixel_size * config.padded_freqs, config.pixel_size * micrograph_freqs, micrograph)]\n",
+    "filtered_model = GaussianImage(config=config, cloud=cloud, state=state, filters=filters)\n",
+    "ax.imshow(ifft(filtered_model()), origin=\"lower\", cmap=\"gray\")"
    ]
   },
   {
@@ -146,11 +159,11 @@
    "outputs": [],
    "source": [
     "# Visualize filters\n",
-    "#fig, axes = plt.subplots(ncols=2, figsize=(8, 6))\n",
-    "#ax1, ax2 = axes\n",
-    "#antialias, whiten = filters\n",
-    "#im1 = ax1.imshow(np.log(whiten.filter), cmap=\"gray\")\n",
-    "#im2 = ax2.imshow(antialias.filter, cmap=\"gray\")"
+    "fig, axes = plt.subplots(ncols=2, figsize=(8, 6))\n",
+    "ax1, ax2 = axes\n",
+    "antialias, whiten = filters\n",
+    "im1 = ax1.imshow(whiten.filter, cmap=\"gray\")\n",
+    "im2 = ax2.imshow(antialias.filter, cmap=\"gray\")"
    ]
   },
   {
