--- a/notebooks/test-pipeline.ipynb
+++ b/notebooks/test-pipeline.ipynb
@@ -44,7 +44,7 @@
     "from jax_2dtm.simulator import NufftScattering, GaussianScattering, Cloud\n",
     "from jax_2dtm.simulator import ScatteringImage, OpticsImage, GaussianImage\n",
     "from jax_2dtm.simulator import AntiAliasingFilter, WhiteningFilter\n",
-    "from jax_2dtm.simulator import EulerPose, CTFOptics, Intensity, WhiteNoise, LorenzianNoise, ParameterState\n",
+    "from jax_2dtm.simulator import EulerPose, CTFOptics, Intensity, WhiteNoise, ExponentialNoise, ParameterState\n",
     "from jax_2dtm.utils import fft, ifft, fftfreqs, pad, powerspectrum, radial_average"
    ]
   },
@@ -80,7 +80,7 @@
     "# Initialize model, parameters, and compute image\n",
     "pose = EulerPose(-50.0, 50.0, np.pi / 4, np.pi / 10, np.pi / 4)\n",
     "optics = CTFOptics()\n",
-    "noise = LorenzianNoise(key=jax.random.PRNGKey(seed=0), kappa=0.5, xi=6.0)\n",
+    "noise = ExponentialNoise(key=jax.random.PRNGKey(seed=0), kappa=0.3, xi=4.0, alpha=1.0)\n",
     "intensity = Intensity()\n",
     "state = ParameterState(pose=pose, optics=optics, noise=noise, intensity=intensity)"
    ]
@@ -149,7 +149,7 @@
     "fig, ax = plt.subplots(figsize=(4, 4))\n",
     "filters = [AntiAliasingFilter(config.pixel_size * config.padded_freqs), WhiteningFilter(config.pixel_size * config.padded_freqs, config.pixel_size * micrograph_freqs, micrograph)]\n",
     "filtered_model = GaussianImage(config=config, cloud=cloud, state=state, filters=filters)\n",
-    "ax.imshow(ifft(filtered_model()), origin=\"lower\", cmap=\"gray\")"
+    "ax.imshow(ifft(filtered_model.render(state)), origin=\"lower\", cmap=\"gray\")"
    ]
   },
   {
@@ -220,7 +220,7 @@
    "outputs": [],
    "source": [
     "# Initialize the model and plot residuals\n",
-    "fig, axes = plt.subplots(ncols=3, figsize=(12, 7))\n",
+    "fig, axes = plt.subplots(ncols=3, figsize=(12, 6))\n",
     "ax1, ax2, ax3 = axes\n",
     "observed = noisy_model()\n",
     "model = GaussianImage(config=config, cloud=cloud, state=state, observed=observed)\n",
@@ -262,6 +262,13 @@
     "grad = grad_loss(params)\n",
     "grad"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
