--- a/notebooks/test-pipeline.ipynb
+++ b/notebooks/test-pipeline.ipynb
@@ -41,11 +41,11 @@
    "outputs": [],
    "source": [
     "# Image simulator\n",
-    "from jax_2dtm.simulator import NufftScattering, GaussianScattering, Cloud\n",
+    "from jax_2dtm.simulator import NufftScattering\n",
     "from jax_2dtm.simulator import ScatteringImage, OpticsImage, GaussianImage\n",
     "from jax_2dtm.simulator import AntiAliasingFilter, WhiteningFilter\n",
-    "from jax_2dtm.simulator import EulerPose, CTFOptics, Intensity, WhiteNoise, ExponentialNoise, ParameterState\n",
-    "from jax_2dtm.utils import fft, ifft, fftfreqs, pad, powerspectrum, radial_average"
+    "from jax_2dtm.simulator import EulerPose, CTFOptics, Intensity, ExponentialNoise, WhiteNoise, ParameterState\n",
+    "from jax_2dtm.utils import ifft, fftfreqs"
    ]
   },
   {
@@ -66,7 +66,7 @@
    "outputs": [],
    "source": [
     "# Configure image data and read template as point cloud\n",
-    "config = NufftScattering((95, 95), pixel_size, pad_scale=1.4, eps=1e-6)\n",
+    "config = NufftScattering((95, 95), pixel_size, pad_scale=1, eps=1e-6)\n",
     "#config = GaussianScattering((131, 131), pixel_size, pad=2, scale=1/3)\n",
     "cloud = load_grid_as_cloud(filename, config)"
    ]
@@ -78,9 +78,9 @@
    "outputs": [],
    "source": [
     "# Initialize model, parameters, and compute image\n",
-    "pose = EulerPose(-50.0, 50.0, np.pi / 4, np.pi / 10, np.pi / 4)\n",
+    "pose = EulerPose(-30.0, 20.0, np.pi / 4, np.pi / 10, -np.pi / 6)\n",
     "optics = CTFOptics()\n",
-    "noise = ExponentialNoise(key=jax.random.PRNGKey(seed=0), kappa=0.3, xi=4.0, alpha=1.0)\n",
+    "noise = ExponentialNoise(key=jax.random.PRNGKey(seed=0), kappa=0.1, xi=6.0, alpha=0.5)\n",
     "intensity = Intensity()\n",
     "state = ParameterState(pose=pose, optics=optics, noise=noise, intensity=intensity)"
    ]
@@ -105,9 +105,9 @@
     "# Plot models\n",
     "fig, axes = plt.subplots(ncols=3, figsize=(12, 6))\n",
     "ax1, ax2, ax3 = axes\n",
-    "ax1.imshow(ifft(scattering_model()), origin=\"lower\", cmap=\"gray\")\n",
-    "ax2.imshow(ifft(optics_model()), origin=\"lower\", cmap=\"gray\")\n",
-    "ax3.imshow(ifft(noisy_model()), origin=\"lower\", cmap=\"gray\")"
+    "im1 = ax1.imshow(ifft(scattering_model()), origin=\"lower\", cmap=\"gray\")\n",
+    "im2 = ax2.imshow(ifft(optics_model()), origin=\"lower\", cmap=\"gray\")\n",
+    "im3 = ax3.imshow(ifft(noisy_model()), origin=\"lower\", cmap=\"gray\")"
    ]
   },
   {
@@ -147,9 +147,10 @@
    "source": [
     "# Show forward model for a whitened image\n",
     "fig, ax = plt.subplots(figsize=(4, 4))\n",
+    "white_noise = WhiteNoise(key=jax.random.PRNGKey(seed=0), alpha=1.0)\n",
     "filters = [AntiAliasingFilter(config.pixel_size * config.padded_freqs), WhiteningFilter(config.pixel_size * config.padded_freqs, config.pixel_size * micrograph_freqs, micrograph)]\n",
     "filtered_model = GaussianImage(config=config, cloud=cloud, state=state, filters=filters)\n",
-    "ax.imshow(ifft(filtered_model.render(state)), origin=\"lower\", cmap=\"gray\")"
+    "ax.imshow(ifft(filtered_model.render()), origin=\"lower\", cmap=\"gray\")"
    ]
   },
   {
@@ -164,6 +165,18 @@
     "antialias, whiten = filters\n",
     "im1 = ax1.imshow(whiten.filter, cmap=\"gray\")\n",
     "im2 = ax2.imshow(antialias.filter, cmap=\"gray\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Visualize masks\n",
+    "fig, ax = plt.subplots(figsize=(4, 3))\n",
+    "circle = filtered_model.masks[0]\n",
+    "im = ax.imshow(circle.mask, cmap=\"gray\")"
    ]
   },
   {
@@ -222,6 +235,7 @@
     "# Initialize the model and plot residuals\n",
     "fig, axes = plt.subplots(ncols=3, figsize=(12, 6))\n",
     "ax1, ax2, ax3 = axes\n",
+    "noisy_model = GaussianImage(config=config, cloud=cloud, state=state, filters=[])\n",
     "observed = noisy_model()\n",
     "model = GaussianImage(config=config, cloud=cloud, state=state, observed=observed)\n",
     "simulated, observed, residuals = model.render(), model.observed, model.residuals()\n",
@@ -262,13 +276,6 @@
     "grad = grad_loss(params)\n",
     "grad"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
