some cleanup and speedups

--- a/notebooks/test-pipeline.ipynb
+++ b/notebooks/test-pipeline.ipynb
@@ -41,7 +41,7 @@
    "outputs": [],
    "source": [
     "# Image simulator\n",
-    "from jax_2dtm.simulator import NufftScattering\n",
+    "from jax_2dtm.simulator import NufftScattering, GaussianScattering\n",
     "from jax_2dtm.simulator import ScatteringImage, OpticsImage, GaussianImage\n",
     "from jax_2dtm.simulator import AntiAliasingFilter, WhiteningFilter\n",
     "from jax_2dtm.simulator import EulerPose, CTFOptics, Intensity, ExponentialNoise, WhiteNoise, ParameterState\n",
@@ -66,9 +66,9 @@
    "outputs": [],
    "source": [
     "# Configure image data and read template as point cloud\n",
-    "config = NufftScattering((95, 95), pixel_size, pad_scale=1, eps=1e-6)\n",
-    "#config = GaussianScattering((131, 131), pixel_size, pad=2, scale=1/3)\n",
-    "cloud = load_grid_as_cloud(filename, config)"
+    "config = NufftScattering((95, 95), pixel_size, pad_scale=1.4, eps=1e-6)\n",
+    "#config = GaussianScattering((95, 95), pixel_size, pad_scale=1.4, scale=1/3)\n",
+    "cloud = load_grid_as_cloud(filename, config, atol=1e-5)"
    ]
   },
   {
