tensorflow-nufft is now default. initial commit for fourier-slice projection scattering, but not yet working

--- a/notebooks/test-pipeline.ipynb
+++ b/notebooks/test-pipeline.ipynb
@@ -41,7 +41,7 @@
    "outputs": [],
    "source": [
     "# Image simulator\n",
-    "from jax_2dtm.simulator import NufftScattering, GaussianScattering\n",
+    "from jax_2dtm.simulator import NufftScattering\n",
     "from jax_2dtm.simulator import ScatteringImage, OpticsImage, GaussianImage\n",
     "from jax_2dtm.simulator import AntiAliasingFilter, WhiteningFilter\n",
     "from jax_2dtm.simulator import EulerPose, CTFOptics, Intensity, ExponentialNoise, WhiteNoise, ParameterState\n",
@@ -56,7 +56,9 @@
    "source": [
     "# Volume filename and metadata\n",
     "pixel_size = 5.28  # Angstroms\n",
-    "filename = \"../tests/data/3jar_13pf_bfm1_ps5_28.mrc\""
+    "filename = \"../tests/data/3jar_13pf_bfm1_ps5_28.mrc\"\n",
+    "pixel_size = 1.32  # Angstroms\n",
+    "filename = \"3jar_13pf_bfm1_ps1_32.mrc\""
    ]
   },
   {
@@ -66,8 +68,10 @@
    "outputs": [],
    "source": [
     "# Configure image data and read template as point cloud\n",
-    "config = NufftScattering((95, 95), pixel_size, pad_scale=1.4, eps=1e-6)\n",
-    "#config = GaussianScattering((95, 95), pixel_size, pad_scale=1.4, scale=1/3)\n",
+    "#config = FourierSliceScattering((220, 220), pixel_size, pad_scale=1)\n",
+    "#cloud = load_grid_as_cloud(filename, config, real=False, flatten=False)\n",
+    "config = NufftScattering((260, 260), pixel_size, pad_scale=2, eps=1e-4)\n",
+    "#config = GaussianScattering((320, 320), pixel_size, pad_scale=1.4, scale=1/3)\n",
     "cloud = load_grid_as_cloud(filename, config, atol=1e-5)"
    ]
   },
@@ -78,9 +82,9 @@
    "outputs": [],
    "source": [
     "# Initialize model, parameters, and compute image\n",
-    "pose = EulerPose(-30.0, 20.0, np.pi / 4, np.pi / 10, -np.pi / 6)\n",
+    "pose = EulerPose(-30.0, 20.0, np.pi / 2, np.pi / 10, -np.pi / 6)\n",
     "optics = CTFOptics()\n",
-    "noise = ExponentialNoise(key=jax.random.PRNGKey(seed=0), kappa=0.1, xi=6.0, alpha=0.5)\n",
+    "noise = ExponentialNoise(key=jax.random.PRNGKey(seed=0), kappa=0.1, xi=3.0, alpha=0.2)\n",
     "intensity = Intensity()\n",
     "state = ParameterState(pose=pose, optics=optics, noise=noise, intensity=intensity)"
    ]
@@ -92,7 +96,7 @@
    "outputs": [],
    "source": [
     "scattering_model = ScatteringImage(config=config, cloud=cloud, state=state)\n",
-    "optics_model = OpticsImage(config=config, cloud=cloud, state=state)\n",
+    "optics_model = OpticsImage(config=config, cloud=cloud, state=state, masks=[])\n",
     "noisy_model = GaussianImage(config=config, cloud=cloud, state=state)"
    ]
   },
@@ -126,7 +130,7 @@
    "source": [
     "# Instantiate image filters\n",
     "fig, ax = plt.subplots(figsize=(4, 4))\n",
-    "micrograph_freqs = fftfreqs((1200, 800), pixel_size)\n",
+    "micrograph_freqs = fftfreqs((800, 600), pixel_size)\n",
     "micrograph = noise.sample(config.pixel_size * micrograph_freqs)\n",
     "whiten = WhiteningFilter(config.pixel_size * config.freqs, config.pixel_size * micrograph_freqs, micrograph)\n",
     "plt.imshow(ifft(whiten(noisy_model())), origin=\"lower\", cmap=\"gray\")"
@@ -168,18 +172,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Visualize masks\n",
-    "fig, ax = plt.subplots(figsize=(4, 3))\n",
-    "circle = filtered_model.masks[0]\n",
-    "im = ax.imshow(circle.mask, cmap=\"gray\")"
-   ]
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -205,7 +197,7 @@
    "outputs": [],
    "source": [
     "# Benchmark jitted pipeline\n",
-    "jitted_noisy_image = jitted_noisy_model(params)"
+    "# jitted_noisy_image = jitted_noisy_model(params)"
    ]
   },
   {
@@ -251,8 +243,8 @@
    "outputs": [],
    "source": [
     "# Compute likelihood\n",
-    "loss = jax.jit(lambda params: model(params))\n",
-    "grad_loss = jax.jit(jax.grad(lambda params: model(params)))"
+    "loss = lambda params: model(params)# jax.jit(lambda params: model(params))\n",
+    "grad_loss = jax.grad(lambda params: model(params))#jax.jit(jax.grad(lambda params: model(params)))"
    ]
   },
   {
@@ -262,8 +254,7 @@
    "outputs": [],
    "source": [
     "# Benchmark jitted pipeline\n",
-    "likelihood = loss(params)\n",
-    "likelihood"
+    "%timeit likelihood = loss(params)"
    ]
   },
   {
@@ -273,9 +264,22 @@
    "outputs": [],
    "source": [
     "# Benchmark gradient\n",
-    "grad = grad_loss(params)\n",
-    "grad"
+    "%timeit grad = grad_loss(params)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
