--- a/notebooks/test-pipeline.ipynb
+++ b/notebooks/test-pipeline.ipynb
@@ -43,7 +43,7 @@
     "# Image simulator\n",
     "from jax_2dtm.simulator import NufftScattering\n",
     "from jax_2dtm.simulator import ScatteringImage, OpticsImage, GaussianImage\n",
-    "from jax_2dtm.simulator import AntiAliasingFilter, WhiteningFilter\n",
+    "from jax_2dtm.simulator import AntiAliasingFilter, WhiteningFilter, CircularMask\n",
     "from jax_2dtm.simulator import EulerPose, CTFOptics, Intensity, ExponentialNoise, WhiteNoise, ParameterState\n",
     "from jax_2dtm.utils import ifft, fftfreqs"
    ]
@@ -57,8 +57,8 @@
     "# Volume filename and metadata\n",
     "pixel_size = 5.28  # Angstroms\n",
     "filename = \"../tests/data/3jar_13pf_bfm1_ps5_28.mrc\"\n",
-    "pixel_size = 1.32  # Angstroms\n",
-    "filename = \"3jar_13pf_bfm1_ps1_32.mrc\""
+    "#pixel_size = 1.32  # Angstroms\n",
+    "#filename = \"3jar_13pf_bfm1_ps1_32.mrc\""
    ]
   },
   {
@@ -70,9 +70,9 @@
     "# Configure image data and read template as point cloud\n",
     "#config = FourierSliceScattering((220, 220), pixel_size, pad_scale=1)\n",
     "#cloud = load_grid_as_cloud(filename, config, real=False, flatten=False)\n",
-    "config = NufftScattering((260, 260), pixel_size, pad_scale=2, eps=1e-4)\n",
+    "config = NufftScattering((95, 95), pixel_size, pad_scale=2.1, eps=1e-5)\n",
     "#config = GaussianScattering((320, 320), pixel_size, pad_scale=1.4, scale=1/3)\n",
-    "cloud = load_grid_as_cloud(filename, config, atol=1e-5)"
+    "cloud = load_grid_as_cloud(filename, config, atol=1e-6)"
    ]
   },
   {
@@ -84,7 +84,7 @@
     "# Initialize model, parameters, and compute image\n",
     "pose = EulerPose(-30.0, 20.0, np.pi / 2, np.pi / 10, -np.pi / 6)\n",
     "optics = CTFOptics()\n",
-    "noise = ExponentialNoise(key=jax.random.PRNGKey(seed=0), kappa=0.1, xi=3.0, alpha=0.2)\n",
+    "noise = ExponentialNoise(key=jax.random.PRNGKey(seed=0), kappa=0.1, xi=6.0, alpha=0.5)\n",
     "intensity = Intensity()\n",
     "state = ParameterState(pose=pose, optics=optics, noise=noise, intensity=intensity)"
    ]
@@ -137,6 +137,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.imshow(ifft(micrograph).T, origin=\"lower\", cmap=\"gray\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -167,7 +176,7 @@
     "fig, axes = plt.subplots(ncols=2, figsize=(8, 6))\n",
     "ax1, ax2 = axes\n",
     "antialias, whiten = filters\n",
-    "im1 = ax1.imshow(whiten.filter, cmap=\"gray\")\n",
+    "im1 = ax1.imshow(whiten.filter, cmap=\"viridis\")\n",
     "im2 = ax2.imshow(antialias.filter, cmap=\"gray\")"
    ]
   },
@@ -229,7 +238,8 @@
     "ax1, ax2, ax3 = axes\n",
     "noisy_model = GaussianImage(config=config, cloud=cloud, state=state, filters=[])\n",
     "observed = noisy_model()\n",
-    "model = GaussianImage(config=config, cloud=cloud, state=state, observed=observed)\n",
+    "masks = [CircularMask(config.freqs*config.pixel_size)]\n",
+    "model = GaussianImage(config=config, cloud=cloud, state=state, masks=masks, observed=observed)\n",
     "simulated, observed, residuals = model.render(), model.observed, model.residuals()\n",
     "ax1.imshow(ifft(simulated), origin=\"lower\", cmap=\"gray\")\n",
     "ax2.imshow(ifft(observed), origin=\"lower\", cmap=\"gray\")\n",
