clean up masking and cropping, and upsample observed data instead of padding

--- a/notebooks/test-pipeline.ipynb
+++ b/notebooks/test-pipeline.ipynb
@@ -70,7 +70,7 @@
     "# Configure image data and read template as point cloud\n",
     "#config = FourierSliceScattering((220, 220), pixel_size, pad_scale=1)\n",
     "#cloud = load_grid_as_cloud(filename, config, real=False, flatten=False)\n",
-    "config = NufftScattering((95, 95), pixel_size, pad_scale=2.1, eps=1e-5)\n",
+    "config = NufftScattering((95, 95), pixel_size, pad_scale=2.2, eps=1e-5)\n",
     "#config = GaussianScattering((320, 320), pixel_size, pad_scale=1.4, scale=1/3)\n",
     "cloud = load_grid_as_cloud(filename, config, atol=1e-6)"
    ]
@@ -237,8 +237,8 @@
     "fig, axes = plt.subplots(ncols=3, figsize=(12, 6))\n",
     "ax1, ax2, ax3 = axes\n",
     "noisy_model = GaussianImage(config=config, cloud=cloud, state=state, filters=[])\n",
-    "observed = noisy_model()\n",
-    "masks = [CircularMask(config.freqs*config.pixel_size)]\n",
+    "observed = ifft(noisy_model())\n",
+    "masks = [CircularMask(config.coords/config.pixel_size)]\n",
     "model = GaussianImage(config=config, cloud=cloud, state=state, masks=masks, observed=observed)\n",
     "simulated, observed, residuals = model.render(), model.observed, model.residuals()\n",
     "ax1.imshow(ifft(simulated), origin=\"lower\", cmap=\"gray\")\n",
@@ -276,20 +276,6 @@
     "# Benchmark gradient\n",
     "%timeit grad = grad_loss(params)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
