updating model parameters sets observed data again. this is a bug

--- a/notebooks/test-pipeline.ipynb
+++ b/notebooks/test-pipeline.ipynb
@@ -236,8 +236,8 @@
     "# Initialize the model and plot residuals\n",
     "fig, axes = plt.subplots(ncols=3, figsize=(12, 6))\n",
     "ax1, ax2, ax3 = axes\n",
-    "noisy_model = GaussianImage(config=config, cloud=cloud, state=state, filters=[])\n",
-    "observed = ifft(noisy_model())\n",
+    "noisy_model = GaussianImage(config=config, cloud=cloud, state=state, masks=[], filters=[])\n",
+    "observed = noisy_model()\n",
     "masks = [CircularMask(config.coords/config.pixel_size)]\n",
     "model = GaussianImage(config=config, cloud=cloud, state=state, masks=masks, observed=observed)\n",
     "simulated, observed, residuals = model.render(), model.observed, model.residuals()\n",
