--- a/notebooks/test-pipeline.ipynb
+++ b/notebooks/test-pipeline.ipynb
@@ -68,11 +68,11 @@
    "outputs": [],
    "source": [
     "# Configure image data and read template as point cloud\n",
-    "#config = FourierSliceScattering((80, 80), pixel_size, pad_scale=1)\n",
-    "#cloud = load_grid_as_cloud(filename, config, real=False)\n",
-    "config = NufftScattering((95, 95), pixel_size, pad_scale=2.2, eps=1e-5)\n",
+    "config = FourierSliceScattering((80, 80), pixel_size, pad_scale=1)\n",
+    "cloud = load_grid_as_cloud(filename, config, real=False)\n",
+    "#config = NufftScattering((95, 95), pixel_size, pad_scale=2.2, eps=1e-5)\n",
     "#config = GaussianScattering((320, 320), pixel_size, pad_scale=1.4, scale=1/3)\n",
-    "cloud = load_grid_as_cloud(filename, config, atol=1e-6)"
+    "#cloud = load_grid_as_cloud(filename, config, atol=1e-6)"
    ]
   },
   {
@@ -82,7 +82,8 @@
    "outputs": [],
    "source": [
     "# Initialize model, parameters, and compute image\n",
-    "pose = EulerPose(0.0, 0.0, np.pi / 2, np.pi / 10, -np.pi / 6)\n",
+    "pose = EulerPose(-50.0, 30.0, np.pi / 4, np.pi / 10, -np.pi / 6)\n",
+    "pose = EulerPose()\n",
     "optics = CTFOptics()\n",
     "noise = ExponentialNoise(key=jax.random.PRNGKey(seed=0), kappa=0.1, xi=6.0, alpha=0.5)\n",
     "intensity = Intensity()\n",
@@ -95,7 +96,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scattering_model = ScatteringImage(config=config, cloud=cloud, state=state, filters=[])\n",
+    "scattering_model = ScatteringImage(config=config, cloud=cloud, state=state)\n",
     "optics_model = OpticsImage(config=config, cloud=cloud, state=state, masks=[])\n",
     "noisy_model = GaussianImage(config=config, cloud=cloud, state=state)"
    ]
