--- a/notebooks/test-pipeline.ipynb
+++ b/notebooks/test-pipeline.ipynb
@@ -41,7 +41,7 @@
    "outputs": [],
    "source": [
     "# Image simulator\n",
-    "from jax_2dtm.simulator import NufftScattering, FourierSliceScattering\n",
+    "from jax_2dtm.simulator import NufftScattering\n",
     "from jax_2dtm.simulator import ScatteringImage, OpticsImage, GaussianImage\n",
     "from jax_2dtm.simulator import AntiAliasingFilter, WhiteningFilter, CircularMask\n",
     "from jax_2dtm.simulator import EulerPose, CTFOptics, Intensity, ExponentialNoise, WhiteNoise, ParameterState\n",
@@ -68,11 +68,8 @@
    "outputs": [],
    "source": [
     "# Configure image data and read template as point cloud\n",
-    "config = FourierSliceScattering((80, 80), pixel_size, pad_scale=1)\n",
-    "cloud = load_grid_as_cloud(filename, config, real=False)\n",
-    "#config = NufftScattering((95, 95), pixel_size, pad_scale=2.2, eps=1e-5)\n",
-    "#config = GaussianScattering((320, 320), pixel_size, pad_scale=1.4, scale=1/3)\n",
-    "#cloud = load_grid_as_cloud(filename, config, atol=1e-6)"
+    "config = NufftScattering((80, 80), pixel_size, pad_scale=2.2, eps=1e-5)\n",
+    "cloud = load_grid_as_cloud(filename, config, atol=1e-6)"
    ]
   },
   {
@@ -83,7 +80,6 @@
    "source": [
     "# Initialize model, parameters, and compute image\n",
     "pose = EulerPose(-50.0, 30.0, np.pi / 4, np.pi / 10, -np.pi / 6)\n",
-    "pose = EulerPose()\n",
     "optics = CTFOptics()\n",
     "noise = ExponentialNoise(key=jax.random.PRNGKey(seed=0), kappa=0.1, xi=6.0, alpha=0.5)\n",
     "intensity = Intensity()\n",
@@ -277,13 +273,6 @@
     "# Benchmark gradient\n",
     "%timeit grad = grad_loss(params)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
