--- a/notebooks/test-pipeline.ipynb
+++ b/notebooks/test-pipeline.ipynb
@@ -80,8 +80,8 @@
    "source": [
     "# Initialize model, parameters, and compute image\n",
     "pose = EulerPose(-50.0, 30.0, np.pi / 4, np.pi / 10, -np.pi / 6)\n",
-    "optics = CTFOptics()\n",
-    "noise = ExponentialNoise(key=jax.random.PRNGKey(seed=0), kappa=0.1, xi=6.0, alpha=0.5)\n",
+    "optics = CTFOptics(defocus_u=10000, defocus_v=10000)\n",
+    "noise = ExponentialNoise(key=jax.random.PRNGKey(seed=0), kappa=0.0, xi=6.0, alpha=0.5)\n",
     "intensity = Intensity()\n",
     "state = ParameterState(pose=pose, optics=optics, noise=noise, intensity=intensity)"
    ]
@@ -108,6 +108,7 @@
     "ax1, ax2, ax3 = axes\n",
     "im1 = ax1.imshow(ifft(scattering_model()), origin=\"lower\", cmap=\"gray\")\n",
     "im2 = ax2.imshow(ifft(optics_model()), origin=\"lower\", cmap=\"gray\")\n",
+    "plt.colorbar(im2)\n",
     "im3 = ax3.imshow(ifft(noisy_model()), origin=\"lower\", cmap=\"gray\")"
    ]
   },
@@ -291,7 +292,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.9.15"
   },
   "vscode": {
    "interpreter": {
