Added documentation and renaming. Bug fixes in image rescaling, i.e. masking should be after rescaling, and need to be careful to preserve mean and variance when masking and filtering observed data.

--- a/notebooks/test-pipeline.ipynb
+++ b/notebooks/test-pipeline.ipynb
@@ -21,7 +21,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from matplotlib import pyplot as plt"
+    "from matplotlib import pyplot as plt\n",
+    "from mpl_toolkits.axes_grid1 import make_axes_locatable"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_image(image, fig, ax, cmap=\"gray\", **kwargs):\n",
+    "    im = ax.imshow(image, cmap=cmap, origin=\"lower\", **kwargs)\n",
+    "    divider = make_axes_locatable(ax)\n",
+    "    cax = divider.append_axes(\"right\", size=\"5%\", pad=0.05)\n",
+    "    fig.colorbar(im, cax=cax)\n",
+    "    return fig, ax"
    ]
   },
   {
@@ -68,7 +83,7 @@
    "outputs": [],
    "source": [
     "# Configure image data and read template as point cloud\n",
-    "config = NufftScattering((80, 80), pixel_size, pad_scale=2.2, eps=1e-5)\n",
+    "config = NufftScattering((80, 80), pixel_size, pad_scale=1.5, eps=1e-5)\n",
     "cloud = load_grid_as_cloud(filename, config, atol=1e-6)"
    ]
   },
@@ -79,10 +94,10 @@
    "outputs": [],
    "source": [
     "# Initialize model, parameters, and compute image\n",
-    "pose = EulerPose(-50.0, 30.0, np.pi / 4, np.pi / 10, -np.pi / 6)\n",
-    "optics = CTFOptics(defocus_u=10000, defocus_v=10000)\n",
-    "noise = ExponentialNoise(key=jax.random.PRNGKey(seed=0), kappa=0.0, xi=6.0, alpha=0.5)\n",
-    "intensity = Intensity()\n",
+    "pose = EulerPose(-50.0, 30.0, np.pi / 4, np.pi / 10, -np.pi / 8)\n",
+    "optics = CTFOptics(defocus_u=10000, defocus_v=10000, amplitude_contrast_ratio=.1)\n",
+    "noise = ExponentialNoise(key=jax.random.PRNGKey(seed=0), kappa=0.05, xi=3.0, alpha=0.5)\n",
+    "intensity = Intensity(N=1, mu=0)\n",
     "state = ParameterState(pose=pose, optics=optics, noise=noise, intensity=intensity)"
    ]
   },
@@ -106,10 +121,10 @@
     "# Plot models\n",
     "fig, axes = plt.subplots(ncols=3, figsize=(12, 6))\n",
     "ax1, ax2, ax3 = axes\n",
-    "im1 = ax1.imshow(ifft(scattering_model()), origin=\"lower\", cmap=\"gray\")\n",
-    "im2 = ax2.imshow(ifft(optics_model()), origin=\"lower\", cmap=\"gray\")\n",
-    "plt.colorbar(im2)\n",
-    "im3 = ax3.imshow(ifft(noisy_model()), origin=\"lower\", cmap=\"gray\")"
+    "im1 = plot_image(ifft(scattering_model()), fig, ax1)\n",
+    "im2 = plot_image(ifft(optics_model()), fig, ax2)\n",
+    "im3 = plot_image(ifft(noisy_model()), fig, ax3)\n",
+    "plt.tight_layout()"
    ]
   },
   {
@@ -131,7 +146,7 @@
     "micrograph_freqs = fftfreqs((800, 600), pixel_size)\n",
     "micrograph = noise.sample(config.pixel_size * micrograph_freqs)\n",
     "whiten = WhiteningFilter(config.pixel_size * config.freqs, config.pixel_size * micrograph_freqs, micrograph)\n",
-    "plt.imshow(ifft(whiten(noisy_model())), origin=\"lower\", cmap=\"gray\")"
+    "plot_image(ifft(whiten(noisy_model())), fig, ax)"
    ]
   },
   {
@@ -140,7 +155,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.imshow(ifft(micrograph).T, origin=\"lower\", cmap=\"gray\")"
+    "plt.imshow(ifft(micrograph).T, origin=\"lower\", cmap=\"gray\")\n",
+    "plt.colorbar()"
    ]
   },
   {
@@ -161,7 +177,7 @@
     "white_noise = WhiteNoise(key=jax.random.PRNGKey(seed=0), alpha=1.0)\n",
     "filters = [AntiAliasingFilter(config.pixel_size * config.padded_freqs), WhiteningFilter(config.pixel_size * config.padded_freqs, config.pixel_size * micrograph_freqs, micrograph)]\n",
     "filtered_model = GaussianImage(config=config, cloud=cloud, state=state, filters=filters)\n",
-    "ax.imshow(ifft(filtered_model.render()), origin=\"lower\", cmap=\"gray\")"
+    "plot_image(ifft(filtered_model.render()), fig, ax)"
    ]
   },
   {
@@ -174,8 +190,9 @@
     "fig, axes = plt.subplots(ncols=2, figsize=(8, 6))\n",
     "ax1, ax2 = axes\n",
     "antialias, whiten = filters\n",
-    "im1 = ax1.imshow(whiten.filter, cmap=\"viridis\")\n",
-    "im2 = ax2.imshow(antialias.filter, cmap=\"gray\")"
+    "im1 = plot_image(whiten.filter, fig, ax1, cmap=\"viridis\")\n",
+    "im2 = plot_image(antialias.filter, fig, ax2, cmap=\"gray\")\n",
+    "plt.tight_layout()"
    ]
   },
   {
@@ -193,7 +210,7 @@
    "outputs": [],
    "source": [
     "# Define subset of parameters over which to evaluate model, and jitted model\n",
-    "params = dict(view_phi=np.pi, defocus_u=9000.0, sigma=1.0, N=1.0, mu=10.0)\n",
+    "params = dict(view_phi=np.pi, defocus_u=9000.0, alpha=1.0, N=1.0, mu=0.0)\n",
     "jitted_noisy_model = jax.jit(lambda params: noisy_model(params))"
    ]
   },
@@ -234,14 +251,15 @@
     "# Initialize the model and plot residuals\n",
     "fig, axes = plt.subplots(ncols=3, figsize=(12, 6))\n",
     "ax1, ax2, ax3 = axes\n",
-    "noisy_model = GaussianImage(config=config, cloud=cloud, state=state, masks=[], filters=[])\n",
-    "observed = noisy_model()\n",
     "masks = [CircularMask(config.coords/config.pixel_size)]\n",
+    "observation_model = GaussianImage(config=config, cloud=cloud, state=state, masks=[], filters=[])\n",
+    "observed = observation_model()\n",
     "model = GaussianImage(config=config, cloud=cloud, state=state, masks=masks, observed=observed)\n",
     "simulated, observed, residuals = model.render(), model.observed, model.residuals()\n",
-    "ax1.imshow(ifft(simulated), origin=\"lower\", cmap=\"gray\")\n",
-    "ax2.imshow(ifft(observed), origin=\"lower\", cmap=\"gray\")\n",
-    "ax3.imshow(ifft(residuals), origin=\"lower\", cmap=\"gray\")\n"
+    "plot_image(ifft(simulated), fig, ax1)\n",
+    "plot_image(ifft(observed), fig, ax2)\n",
+    "plot_image(ifft(residuals), fig, ax3)\n",
+    "plt.tight_layout()\n"
    ]
   },
   {
@@ -274,6 +292,13 @@
     "# Benchmark gradient\n",
     "%timeit grad = grad_loss(params)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
