Rename config to scattering in imaging models!

--- a/notebooks/test-pipeline.ipynb
+++ b/notebooks/test-pipeline.ipynb
@@ -83,8 +83,8 @@
    "outputs": [],
    "source": [
     "# Configure image data and read template as point cloud\n",
-    "config = NufftScattering((80, 80), pixel_size, pad_scale=1.5, eps=1e-5)\n",
-    "cloud = load_grid_as_cloud(filename, config, atol=1e-6)"
+    "scattering = NufftScattering((80, 80), pixel_size, pad_scale=2.2, eps=1e-5)\n",
+    "cloud = load_grid_as_cloud(filename, scattering, atol=1e-6)"
    ]
   },
   {
@@ -107,9 +107,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scattering_model = ScatteringImage(config=config, cloud=cloud, state=state)\n",
-    "optics_model = OpticsImage(config=config, cloud=cloud, state=state, masks=[])\n",
-    "noisy_model = GaussianImage(config=config, cloud=cloud, state=state)"
+    "scattering_model = ScatteringImage(scattering=scattering, cloud=cloud, state=state)\n",
+    "optics_model = OpticsImage(scattering=scattering, cloud=cloud, state=state, masks=[])\n",
+    "noisy_model = GaussianImage(scattering=scattering, cloud=cloud, state=state)"
    ]
   },
   {
@@ -144,8 +144,8 @@
     "# Instantiate image filters\n",
     "fig, ax = plt.subplots(figsize=(4, 4))\n",
     "micrograph_freqs = fftfreqs((800, 600), pixel_size)\n",
-    "micrograph = noise.sample(config.pixel_size * micrograph_freqs)\n",
-    "whiten = WhiteningFilter(config.pixel_size * config.freqs, config.pixel_size * micrograph_freqs, micrograph)\n",
+    "micrograph = noise.sample(scattering.pixel_size * micrograph_freqs)\n",
+    "whiten = WhiteningFilter(scattering.pixel_size * scattering.freqs, scattering.pixel_size * micrograph_freqs, micrograph)\n",
     "plot_image(ifft(whiten(noisy_model())), fig, ax)"
    ]
   },
@@ -175,8 +175,8 @@
     "# Show forward model for a whitened image\n",
     "fig, ax = plt.subplots(figsize=(4, 4))\n",
     "white_noise = WhiteNoise(key=jax.random.PRNGKey(seed=0), alpha=1.0)\n",
-    "filters = [AntiAliasingFilter(config.pixel_size * config.padded_freqs), WhiteningFilter(config.pixel_size * config.padded_freqs, config.pixel_size * micrograph_freqs, micrograph)]\n",
-    "filtered_model = GaussianImage(config=config, cloud=cloud, state=state, filters=filters)\n",
+    "filters = [AntiAliasingFilter(scattering.pixel_size * scattering.padded_freqs), WhiteningFilter(scattering.pixel_size * scattering.padded_freqs, scattering.pixel_size * micrograph_freqs, micrograph)]\n",
+    "filtered_model = GaussianImage(scattering=scattering, cloud=cloud, state=state, filters=filters)\n",
     "plot_image(ifft(filtered_model.render()), fig, ax)"
    ]
   },
@@ -251,10 +251,10 @@
     "# Initialize the model and plot residuals\n",
     "fig, axes = plt.subplots(ncols=3, figsize=(12, 6))\n",
     "ax1, ax2, ax3 = axes\n",
-    "masks = [CircularMask(config.coords/config.pixel_size)]\n",
-    "observation_model = GaussianImage(config=config, cloud=cloud, state=state, masks=[], filters=[])\n",
+    "masks = [CircularMask(scattering.coords/scattering.pixel_size)]\n",
+    "observation_model = GaussianImage(scattering=scattering, cloud=cloud, state=state, masks=[], filters=[])\n",
     "observed = observation_model()\n",
-    "model = GaussianImage(config=config, cloud=cloud, state=state, masks=masks, observed=observed)\n",
+    "model = GaussianImage(scattering=scattering, cloud=cloud, state=state, masks=masks, observed=observed)\n",
     "simulated, observed, residuals = model.render(), model.observed, model.residuals()\n",
     "plot_image(ifft(simulated), fig, ax1)\n",
     "plot_image(ifft(observed), fig, ax2)\n",
