Generalize Cloud to Specimen. This adds the flexibility to rasterize from atomic coordinates in the future.

--- a/notebooks/test-pipeline.ipynb
+++ b/notebooks/test-pipeline.ipynb
@@ -107,9 +107,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scattering_model = ScatteringImage(scattering=scattering, cloud=cloud, state=state)\n",
-    "optics_model = OpticsImage(scattering=scattering, cloud=cloud, state=state, masks=[])\n",
-    "noisy_model = GaussianImage(scattering=scattering, cloud=cloud, state=state)"
+    "scattering_model = ScatteringImage(scattering=scattering, specimen=cloud, state=state)\n",
+    "optics_model = OpticsImage(scattering=scattering, specimen=cloud, state=state, masks=[])\n",
+    "noisy_model = GaussianImage(scattering=scattering, specimen=cloud, state=state)"
    ]
   },
   {
@@ -176,7 +176,7 @@
     "fig, ax = plt.subplots(figsize=(4, 4))\n",
     "white_noise = WhiteNoise(key=jax.random.PRNGKey(seed=0), alpha=1.0)\n",
     "filters = [AntiAliasingFilter(scattering.pixel_size * scattering.padded_freqs), WhiteningFilter(scattering.pixel_size * scattering.padded_freqs, scattering.pixel_size * micrograph_freqs, micrograph)]\n",
-    "filtered_model = GaussianImage(scattering=scattering, cloud=cloud, state=state, filters=filters)\n",
+    "filtered_model = GaussianImage(scattering=scattering, specimen=cloud, state=state, filters=filters)\n",
     "plot_image(ifft(filtered_model.render()), fig, ax)"
    ]
   },
@@ -252,9 +252,9 @@
     "fig, axes = plt.subplots(ncols=3, figsize=(12, 6))\n",
     "ax1, ax2, ax3 = axes\n",
     "masks = [CircularMask(scattering.coords/scattering.pixel_size)]\n",
-    "observation_model = GaussianImage(scattering=scattering, cloud=cloud, state=state, masks=[], filters=[])\n",
+    "observation_model = GaussianImage(scattering=scattering, specimen=cloud, state=state, masks=[], filters=[])\n",
     "observed = observation_model()\n",
-    "model = GaussianImage(scattering=scattering, cloud=cloud, state=state, masks=masks, observed=observed)\n",
+    "model = GaussianImage(scattering=scattering, specimen=cloud, state=state, masks=masks, observed=observed)\n",
     "simulated, observed, residuals = model.render(), model.observed, model.residuals()\n",
     "plot_image(ifft(simulated), fig, ax1)\n",
     "plot_image(ifft(observed), fig, ax2)\n",
