Demonstrate module based API rather than bulk imports

--- a/notebooks/test-pipeline.ipynb
+++ b/notebooks/test-pipeline.ipynb
@@ -56,10 +56,7 @@
    "outputs": [],
    "source": [
     "# Image simulator\n",
-    "from jax_2dtm.simulator import NufftScattering\n",
-    "from jax_2dtm.simulator import ScatteringImage, OpticsImage, GaussianImage\n",
-    "from jax_2dtm.simulator import AntiAliasingFilter, WhiteningFilter, CircularMask\n",
-    "from jax_2dtm.simulator import EulerPose, CTFOptics, Intensity, ExponentialNoise, WhiteNoise, ParameterState\n",
+    "import jax_2dtm.simulator as js\n",
     "from jax_2dtm.utils import ifft, fftfreqs"
    ]
   },
@@ -83,7 +80,7 @@
    "outputs": [],
    "source": [
     "# Configure image data and read template as point cloud\n",
-    "scattering = NufftScattering((80, 80), pixel_size, pad_scale=2.2, eps=1e-5)\n",
+    "scattering = js.NufftScattering((80, 80), pixel_size, pad_scale=2.2, eps=1e-5)\n",
     "cloud = load_grid_as_cloud(filename, scattering, atol=1e-6)"
    ]
   },
@@ -94,11 +91,11 @@
    "outputs": [],
    "source": [
     "# Initialize model, parameters, and compute image\n",
-    "pose = EulerPose(-50.0, 30.0, np.pi / 4, np.pi / 10, -np.pi / 8)\n",
-    "optics = CTFOptics(defocus_u=10000, defocus_v=10000, amplitude_contrast_ratio=.1)\n",
-    "noise = ExponentialNoise(key=jax.random.PRNGKey(seed=0), kappa=0.05, xi=3.0, alpha=0.5)\n",
-    "intensity = Intensity(N=1, mu=0)\n",
-    "state = ParameterState(pose=pose, optics=optics, noise=noise, intensity=intensity)"
+    "pose = js.EulerPose(-50.0, 30.0, np.pi / 4, np.pi / 10, -np.pi / 8)\n",
+    "optics = js.CTFOptics(defocus_u=10000, defocus_v=10000, amplitude_contrast_ratio=.1)\n",
+    "noise = js.ExponentialNoise(key=jax.random.PRNGKey(seed=0), kappa=0.05, xi=3.0, alpha=0.5)\n",
+    "intensity = js.Intensity(N=1, mu=0)\n",
+    "state = js.ParameterState(pose=pose, optics=optics, noise=noise, intensity=intensity)"
    ]
   },
   {
@@ -107,9 +104,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scattering_model = ScatteringImage(scattering=scattering, specimen=cloud, state=state)\n",
-    "optics_model = OpticsImage(scattering=scattering, specimen=cloud, state=state, masks=[])\n",
-    "noisy_model = GaussianImage(scattering=scattering, specimen=cloud, state=state)"
+    "scattering_model = js.ScatteringImage(scattering=scattering, specimen=cloud, state=state)\n",
+    "optics_model = js.OpticsImage(scattering=scattering, specimen=cloud, state=state, masks=[])\n",
+    "noisy_model = js.GaussianImage(scattering=scattering, specimen=cloud, state=state)"
    ]
   },
   {
@@ -145,7 +142,7 @@
     "fig, ax = plt.subplots(figsize=(4, 4))\n",
     "micrograph_freqs = fftfreqs((800, 600), pixel_size)\n",
     "micrograph = noise.sample(scattering.pixel_size * micrograph_freqs)\n",
-    "whiten = WhiteningFilter(scattering.pixel_size * scattering.freqs, scattering.pixel_size * micrograph_freqs, micrograph)\n",
+    "whiten = js.WhiteningFilter(scattering.pixel_size * scattering.freqs, scattering.pixel_size * micrograph_freqs, micrograph)\n",
     "plot_image(ifft(whiten(noisy_model())), fig, ax)"
    ]
   },
@@ -174,9 +171,9 @@
    "source": [
     "# Show forward model for a whitened image\n",
     "fig, ax = plt.subplots(figsize=(4, 4))\n",
-    "white_noise = WhiteNoise(key=jax.random.PRNGKey(seed=0), alpha=1.0)\n",
-    "filters = [AntiAliasingFilter(scattering.pixel_size * scattering.padded_freqs), WhiteningFilter(scattering.pixel_size * scattering.padded_freqs, scattering.pixel_size * micrograph_freqs, micrograph)]\n",
-    "filtered_model = GaussianImage(scattering=scattering, specimen=cloud, state=state, filters=filters)\n",
+    "white_noise = js.WhiteNoise(key=jax.random.PRNGKey(seed=0), alpha=1.0)\n",
+    "filters = [js.AntiAliasingFilter(scattering.pixel_size * scattering.padded_freqs), js.WhiteningFilter(scattering.pixel_size * scattering.padded_freqs, scattering.pixel_size * micrograph_freqs, micrograph)]\n",
+    "filtered_model = js.GaussianImage(scattering=scattering, specimen=cloud, state=state, filters=filters)\n",
     "plot_image(ifft(filtered_model.render()), fig, ax)"
    ]
   },
@@ -251,10 +248,10 @@
     "# Initialize the model and plot residuals\n",
     "fig, axes = plt.subplots(ncols=3, figsize=(12, 6))\n",
     "ax1, ax2, ax3 = axes\n",
-    "masks = [CircularMask(scattering.coords/scattering.pixel_size)]\n",
-    "observation_model = GaussianImage(scattering=scattering, specimen=cloud, state=state, masks=[], filters=[])\n",
+    "masks = [js.CircularMask(scattering.coords/scattering.pixel_size)]\n",
+    "observation_model = js.GaussianImage(scattering=scattering, specimen=cloud, state=state, masks=[], filters=[])\n",
     "observed = observation_model()\n",
-    "model = GaussianImage(scattering=scattering, specimen=cloud, state=state, masks=masks, observed=observed)\n",
+    "model = js.GaussianImage(scattering=scattering, specimen=cloud, state=state, masks=masks, observed=observed)\n",
     "simulated, observed, residuals = model.render(), model.observed, model.residuals()\n",
     "plot_image(ifft(simulated), fig, ax1)\n",
     "plot_image(ifft(observed), fig, ax2)\n",
