--- a/notebooks/test-pipeline.ipynb
+++ b/notebooks/test-pipeline.ipynb
@@ -46,7 +46,7 @@
    "outputs": [],
    "source": [
     "# IO utils\n",
-    "from jax_2dtm.io import load_grid_as_cloud"
+    "from cryojax.io import load_grid_as_cloud"
    ]
   },
   {
@@ -56,8 +56,8 @@
    "outputs": [],
    "source": [
     "# Image simulator\n",
-    "import jax_2dtm.simulator as js\n",
-    "from jax_2dtm.utils import ifft, fftfreqs"
+    "import cryojax.simulator as js\n",
+    "from cryojax.utils import ifft, fftfreqs"
    ]
   },
   {
