--- a/tutorials/test-pipeline.ipynb
+++ b/tutorials/test-pipeline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
    "outputs": [],
    "source": [
     "# Image simulator\n",
-    "import cryojax.simulator as js\n",
+    "import cryojax.simulator as cs\n",
     "from cryojax.utils import ifft, fftfreqs"
    ]
   },
@@ -80,7 +80,7 @@
    "outputs": [],
    "source": [
     "# Configure image data and read template as point cloud\n",
-    "scattering = js.NufftScattering((80, 80), pixel_size, pad_scale=2.2, eps=1e-5)\n",
+    "scattering = cs.NufftScattering((80, 80), pixel_size, pad_scale=2.2, eps=1e-5)\n",
     "cloud = load_grid_as_cloud(filename, scattering, atol=1e-6)"
    ]
   },
@@ -91,11 +91,11 @@
    "outputs": [],
    "source": [
     "# Initialize model, parameters, and compute image\n",
-    "pose = js.EulerPose(-50.0, 30.0, np.pi / 4, np.pi / 10, -np.pi / 8)\n",
-    "optics = js.CTFOptics(defocus_u=10000, defocus_v=10000, amplitude_contrast_ratio=.1)\n",
-    "noise = js.ExponentialNoise(key=jax.random.PRNGKey(seed=0), kappa=0.05, xi=3.0, alpha=0.5)\n",
-    "intensity = js.Intensity(N=1, mu=0)\n",
-    "state = js.ParameterState(pose=pose, optics=optics, noise=noise, intensity=intensity)"
+    "pose = cs.EulerPose(-50.0, 30.0, np.pi / 4, np.pi / 10, -np.pi / 8)\n",
+    "optics = cs.CTFOptics(defocus_u=10000, defocus_v=10000, amplitude_contrast_ratio=.1)\n",
+    "noise = cs.ExponentialNoise(key=jax.random.PRNGKey(seed=0), kappa=0.05, xi=3.0, alpha=0.5)\n",
+    "exposure = cs.UniformExposure(N=1, mu=0)\n",
+    "state = cs.ParameterState(pose=pose, optics=optics, noise=noise, exposure=exposure)"
    ]
   },
   {
@@ -104,9 +104,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scattering_model = js.ScatteringImage(scattering=scattering, specimen=cloud, state=state)\n",
-    "optics_model = js.OpticsImage(scattering=scattering, specimen=cloud, state=state, masks=[])\n",
-    "noisy_model = js.GaussianImage(scattering=scattering, specimen=cloud, state=state)"
+    "scattering_model = cs.ScatteringImage(scattering=scattering, specimen=cloud, state=state)\n",
+    "optics_model = cs.OpticsImage(scattering=scattering, specimen=cloud, state=state, masks=[])\n",
+    "noisy_model = cs.GaussianImage(scattering=scattering, specimen=cloud, state=state)"
    ]
   },
   {
@@ -142,7 +142,7 @@
     "fig, ax = plt.subplots(figsize=(4, 4))\n",
     "micrograph_freqs = fftfreqs((800, 600), pixel_size)\n",
     "micrograph = noise.sample(scattering.pixel_size * micrograph_freqs)\n",
-    "whiten = js.WhiteningFilter(scattering.pixel_size * scattering.freqs, scattering.pixel_size * micrograph_freqs, micrograph)\n",
+    "whiten = cs.WhiteningFilter(scattering.pixel_size * scattering.freqs, scattering.pixel_size * micrograph_freqs, micrograph)\n",
     "plot_image(ifft(whiten(noisy_model())), fig, ax)"
    ]
   },
@@ -171,9 +171,9 @@
    "source": [
     "# Show forward model for a whitened image\n",
     "fig, ax = plt.subplots(figsize=(4, 4))\n",
-    "white_noise = js.WhiteNoise(key=jax.random.PRNGKey(seed=0), alpha=1.0)\n",
-    "filters = [js.AntiAliasingFilter(scattering.pixel_size * scattering.padded_freqs), js.WhiteningFilter(scattering.pixel_size * scattering.padded_freqs, scattering.pixel_size * micrograph_freqs, micrograph)]\n",
-    "filtered_model = js.GaussianImage(scattering=scattering, specimen=cloud, state=state, filters=filters)\n",
+    "white_noise = cs.WhiteNoise(key=jax.random.PRNGKey(seed=0), alpha=1.0)\n",
+    "filters = [cs.AntiAliasingFilter(scattering.pixel_size * scattering.padded_freqs), cs.WhiteningFilter(scattering.pixel_size * scattering.padded_freqs, scattering.pixel_size * micrograph_freqs, micrograph)]\n",
+    "filtered_model = cs.GaussianImage(scattering=scattering, specimen=cloud, state=state, filters=filters)\n",
     "plot_image(ifft(filtered_model.render()), fig, ax)"
    ]
   },
@@ -248,10 +248,10 @@
     "# Initialize the model and plot residuals\n",
     "fig, axes = plt.subplots(ncols=3, figsize=(12, 6))\n",
     "ax1, ax2, ax3 = axes\n",
-    "masks = [js.CircularMask(scattering.coords/scattering.pixel_size)]\n",
-    "observation_model = js.GaussianImage(scattering=scattering, specimen=cloud, state=state, masks=[], filters=[])\n",
+    "masks = [cs.CircularMask(scattering.coords/scattering.pixel_size)]\n",
+    "observation_model = cs.GaussianImage(scattering=scattering, specimen=cloud, state=state, masks=[], filters=[])\n",
     "observed = observation_model()\n",
-    "model = js.GaussianImage(scattering=scattering, specimen=cloud, state=state, masks=masks, observed=observed)\n",
+    "model = cs.GaussianImage(scattering=scattering, specimen=cloud, state=state, masks=masks, observed=observed)\n",
     "simulated, observed, residuals = model.render(), model.observed, model.residuals()\n",
     "plot_image(ifft(simulated), fig, ax1)\n",
     "plot_image(ifft(observed), fig, ax2)\n",
