--- a/tutorials/test-pipeline.ipynb
+++ b/tutorials/test-pipeline.ipynb
@@ -80,7 +80,7 @@
    "outputs": [],
    "source": [
     "# Configure image data and read template as point cloud\n",
-    "scattering = cs.NufftScattering((80, 80), pixel_size, pad_scale=2.2, eps=1e-5)\n",
+    "scattering = cs.NufftScattering((80, 80), pixel_size, pad_scale=2.5, eps=1e-5)\n",
     "cloud = load_grid_as_cloud(filename, scattering, atol=1e-6)"
    ]
   },
@@ -93,9 +93,10 @@
     "# Initialize model, parameters, and compute image\n",
     "pose = cs.EulerPose(-50.0, 30.0, np.pi / 4, np.pi / 10, -np.pi / 8)\n",
     "optics = cs.CTFOptics(defocus_u=10000, defocus_v=10000, amplitude_contrast_ratio=.07)\n",
-    "noise = cs.ExponentialNoise(key=jax.random.PRNGKey(seed=0), kappa=0.05, xi=3.0, alpha=0.5)\n",
+    "ice = cs.ExponentialIce(key=jax.random.PRNGKey(seed=0), kappa=0.1, xi=3.0)\n",
     "exposure = cs.UniformExposure(N=1, mu=0)\n",
-    "state = cs.ParameterState(pose=pose, optics=optics, noise=noise, exposure=exposure)"
+    "detector = cs.WhiteDetector(key=jax.random.PRNGKey(seed=1234), alpha=0.5)\n",
+    "state = cs.ParameterState(pose=pose, ice=ice, optics=optics, exposure=exposure, detector=detector)"
    ]
   },
   {
@@ -105,8 +106,8 @@
    "outputs": [],
    "source": [
     "scattering_model = cs.ScatteringImage(scattering=scattering, specimen=cloud, state=state)\n",
-    "optics_model = cs.OpticsImage(scattering=scattering, specimen=cloud, state=state, masks=[])\n",
-    "noisy_model = cs.GaussianImage(scattering=scattering, specimen=cloud, state=state)"
+    "optics_model = cs.OpticsImage(scattering=scattering, specimen=cloud, state=state)\n",
+    "detector_model = cs.DetectorImage(scattering=scattering, specimen=cloud, state=state)"
    ]
   },
   {
@@ -120,7 +121,7 @@
     "ax1, ax2, ax3 = axes\n",
     "im1 = plot_image(ifft(scattering_model()), fig, ax1)\n",
     "im2 = plot_image(ifft(optics_model()), fig, ax2)\n",
-    "im3 = plot_image(ifft(noisy_model()), fig, ax3)\n",
+    "im3 = plot_image(ifft(detector_model()), fig, ax3)\n",
     "plt.tight_layout()"
    ]
   },
@@ -141,9 +142,9 @@
     "# Instantiate image filters\n",
     "fig, ax = plt.subplots(figsize=(4, 4))\n",
     "micrograph_freqs = fftfreqs((800, 600), pixel_size)\n",
-    "micrograph = noise.sample(scattering.pixel_size * micrograph_freqs)\n",
+    "micrograph = ice.sample(scattering.pixel_size * micrograph_freqs) * optics(micrograph_freqs) + detector.sample(scattering.pixel_size * micrograph_freqs)\n",
     "whiten = cs.WhiteningFilter(scattering.pixel_size * scattering.freqs, scattering.pixel_size * micrograph_freqs, micrograph)\n",
-    "plot_image(ifft(whiten(noisy_model())), fig, ax)"
+    "plot_image(ifft(whiten(detector_model())), fig, ax)"
    ]
   },
   {
@@ -171,7 +172,6 @@
    "source": [
     "# Show forward model for a whitened image\n",
     "fig, ax = plt.subplots(figsize=(4, 4))\n",
-    "white_noise = cs.WhiteNoise(key=jax.random.PRNGKey(seed=0), alpha=1.0)\n",
     "filters = [cs.AntiAliasingFilter(scattering.pixel_size * scattering.padded_freqs), cs.WhiteningFilter(scattering.pixel_size * scattering.padded_freqs, scattering.pixel_size * micrograph_freqs, micrograph)]\n",
     "filtered_model = cs.GaussianImage(scattering=scattering, specimen=cloud, state=state, filters=filters)\n",
     "plot_image(ifft(filtered_model.render()), fig, ax)"
@@ -228,7 +228,7 @@
    "outputs": [],
    "source": [
     "# Benchmark non-jitted pipeline\n",
-    "noisy_image = noisy_model(params)"
+    "noisy_image = detector_model(params)"
    ]
   },
   {
