--- a/tutorials/test-pipeline.ipynb
+++ b/tutorials/test-pipeline.ipynb
@@ -93,9 +93,9 @@
     "# Initialize model, parameters, and compute image\n",
     "pose = cs.EulerPose(-50.0, 30.0, np.pi / 4, np.pi / 10, -np.pi / 8)\n",
     "optics = cs.CTFOptics(defocus_u=10000, defocus_v=10000, amplitude_contrast_ratio=.07)\n",
-    "ice = cs.ExponentialIce(key=jax.random.PRNGKey(seed=0), kappa=0.1, xi=3.0)\n",
+    "ice = cs.ExponentialNoiseIce(key=jax.random.PRNGKey(seed=0), kappa=0.1, xi=3.0)\n",
     "exposure = cs.UniformExposure(N=1, mu=0)\n",
-    "detector = cs.WhiteDetector(key=jax.random.PRNGKey(seed=1234), alpha=0.5)\n",
+    "detector = cs.WhiteNoiseDetector(key=jax.random.PRNGKey(seed=1234), alpha=0.5)\n",
     "state = cs.ParameterState(pose=pose, ice=ice, optics=optics, exposure=exposure, detector=detector)"
    ]
   },
