serialization pytest fails in fourier space

--- a/tutorials/test-pipeline.ipynb
+++ b/tutorials/test-pipeline.ipynb
@@ -95,7 +95,7 @@
     "optics = cs.CTFOptics(defocus_u=10000, defocus_v=10000, amplitude_contrast=.07)\n",
     "ice = cs.ExponentialNoiseIce(key=jax.random.PRNGKey(seed=0), kappa=0.1, xi=3.0)\n",
     "exposure = cs.UniformExposure(N=1, mu=0)\n",
-    "detector = cs.WhiteNoiseDetector(key=jax.random.PRNGKey(seed=1234), alpha=0.5)\n",
+    "detector = cs.WhiteNoiseDetector(key=jax.random.PRNGKey(seed=1234), alpha=1.0)\n",
     "state = cs.ParameterState(pose=pose, ice=ice, optics=optics, exposure=exposure, detector=detector)"
    ]
   },
@@ -208,7 +208,7 @@
    "source": [
     "# Define subset of parameters over which to evaluate model, and jitted model\n",
     "params = dict(view_phi=np.pi, defocus_u=9000.0, alpha=1.0, N=1.0, mu=0.0)\n",
-    "jitted_noisy_model = jax.jit(lambda params: noisy_model(params))"
+    "jitted_model = jax.jit(lambda params: detector_model(params))"
    ]
   },
   {
@@ -218,7 +218,7 @@
    "outputs": [],
    "source": [
     "# Benchmark jitted pipeline\n",
-    "# jitted_noisy_image = jitted_noisy_model(params)"
+    "# jitted_image = jitted_model(params)"
    ]
   },
   {
@@ -228,7 +228,7 @@
    "outputs": [],
    "source": [
     "# Benchmark non-jitted pipeline\n",
-    "noisy_image = detector_model(params)"
+    "# image = detector_model(params)"
    ]
   },
   {
@@ -276,7 +276,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Benchmark jitted pipeline\n",
+    "# Benchmark jitted loss pipeline\n",
     "%timeit likelihood = loss(params)"
    ]
   },
@@ -296,11 +296,25 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.12 ('jax-2dtm')",
+   "display_name": "cryojax",
    "language": "python",
    "name": "python3"
   },
@@ -315,11 +329,6 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.15"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "d54389072f5f521d2ecfa69c70221601c9c73f7ba153ba5ad0df84f5e2694f8a"
-   }
   }
  },
  "nbformat": 4,
